k8s/traefik/glitchtip.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glitchtip
  namespace: glitchtip
spec:
  ingressClassName: traefik
  rules:
    - host: glitchtip.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glitchtip
                port:
                  number: 8000
